parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    TYPE_TUPLE

Grammar

Rule 0     S' -> program
Rule 1     program -> program_body
Rule 2     program_body -> program_body_item program_body
Rule 3     program_body -> program_body_item
Rule 4     program_body_item -> statement
Rule 5     program_body_item -> agent_def
Rule 6     program_body_item -> connect_block
Rule 7     program_body_item -> func_def
Rule 8     var_decl_list -> var_decl var_decl_list
Rule 9     var_decl_list -> var_decl
Rule 10    var_decl -> IDENTIFIER COLON type EQUALS expr
Rule 11    var_decl -> IDENTIFIER COLON type
Rule 12    var_decl -> IDENTIFIER EQUALS expr
Rule 13    var_decl -> IDENTIFIER
Rule 14    type -> base_type
Rule 15    type -> list_type
Rule 16    type -> record_type
Rule 17    base_type -> TYPE_STR
Rule 18    base_type -> TYPE_INT
Rule 19    base_type -> TYPE_FLOAT
Rule 20    base_type -> TYPE_BOOL
Rule 21    list_type -> TYPE_LIST LBRACE type RBRACE
Rule 22    record_type -> TYPE_RECORD LBRACE field_decl_list RBRACE
Rule 23    field_decl_list -> field_decl field_decl_list
Rule 24    field_decl_list -> field_decl
Rule 25    field_decl -> IDENTIFIER COLON type
Rule 26    agent_def -> AGENT IDENTIFIER COLON INDENT agent_body DEDENT
Rule 27    agent_body -> agent_body_item agent_body
Rule 28    agent_body -> agent_body_item
Rule 29    agent_body_item -> input_block
Rule 30    agent_body_item -> output_block
Rule 31    agent_body_item -> memory_block
Rule 32    agent_body_item -> model_block
Rule 33    agent_body_item -> statement
Rule 34    agent_body_item -> chat_block
Rule 35    input_block -> INPUT COLON INDENT var_decl_list DEDENT
Rule 36    output_block -> OUTPUT COLON INDENT var_decl_list DEDENT
Rule 37    memory_block -> MEMORY COLON INDENT var_decl_list DEDENT
Rule 38    model_block -> MODEL COLON STRING
Rule 39    chat_block -> CHAT IDENTIFIER COLON TRIPLE_STRING
Rule 40    chat_block -> CHAT COLON TRIPLE_STRING
Rule 41    connect_block -> CONNECT COLON INDENT connection_list DEDENT
Rule 42    connection_list -> connection connection_list
Rule 43    connection_list -> connection
Rule 44    connection -> IDENTIFIER COLON type INDENT agent_ref ARROW agent_ref DEDENT
Rule 45    agent_ref -> IDENTIFIER agent_ref_tail
Rule 46    agent_ref_tail -> DOT IDENTIFIER agent_ref_tail
Rule 47    agent_ref_tail -> DOT OUTPUT agent_ref_tail
Rule 48    agent_ref_tail -> DOT INPUT agent_ref_tail
Rule 49    agent_ref_tail -> empty
Rule 50    func_def -> DEF IDENTIFIER LPAREN param_list RPAREN COLON type COLON stmt_block
Rule 51    func_def -> DEF IDENTIFIER LPAREN param_list RPAREN COLON stmt_block
Rule 52    param_list -> param_decl param_list_tail
Rule 53    param_list -> empty
Rule 54    param_list_tail -> COMMA param_decl param_list_tail
Rule 55    param_list_tail -> empty
Rule 56    param_decl -> var_decl
Rule 57    stmt_block -> INDENT statement_list DEDENT
Rule 58    statement_list -> statement statement_list
Rule 59    statement_list -> statement
Rule 60    statement -> for_stmt
Rule 61    statement -> if_stmt
Rule 62    statement -> while_stmt
Rule 63    statement -> assign_stmt
Rule 64    statement -> break_stmt
Rule 65    statement -> continue_stmt
Rule 66    statement -> return_stmt
Rule 67    assign_stmt -> IDENTIFIER COLON type EQUALS expr
Rule 68    assign_stmt -> IDENTIFIER EQUALS expr
Rule 69    return_stmt -> RETURN expr
Rule 70    for_stmt -> FOR IDENTIFIER IN expr COLON stmt_block
Rule 71    break_stmt -> BREAK
Rule 72    continue_stmt -> CONTINUE
Rule 73    if_stmt -> IF expr COLON stmt_block ELSE COLON stmt_block
Rule 74    if_stmt -> IF expr COLON stmt_block
Rule 75    while_stmt -> WHILE expr COLON stmt_block
Rule 76    expr -> expr_head bin_op expr_tail
Rule 77    expr -> expr_head
Rule 78    expr_head -> atom
Rule 79    expr_head -> list_expr
Rule 80    expr_head -> record_expr
Rule 81    expr_head -> field_access
Rule 82    expr_head -> func_call
Rule 83    expr_tail -> expr
Rule 84    atom -> IDENTIFIER
Rule 85    atom -> STRING
Rule 86    atom -> NUMBER
Rule 87    list_expr -> LBRACE list_elements RBRACE
Rule 88    list_elements -> expr list_elements_tail
Rule 89    list_elements -> expr
Rule 90    list_elements_tail -> COMMA expr list_elements_tail
Rule 91    list_elements_tail -> COMMA expr
Rule 92    record_expr -> LBRACE record_elements RBRACE
Rule 93    record_elements -> field_assign record_elements_tail
Rule 94    record_elements -> field_assign
Rule 95    record_elements_tail -> COMMA field_assign record_elements_tail
Rule 96    record_elements_tail -> COMMA field_assign
Rule 97    field_assign -> IDENTIFIER EQUALS expr
Rule 98    field_access -> IDENTIFIER DOT IDENTIFIER
Rule 99    func_call -> IDENTIFIER LPAREN arg_list RPAREN
Rule 100   arg_list -> expr arg_list_tail
Rule 101   arg_list -> empty
Rule 102   arg_list_tail -> COMMA expr arg_list_tail
Rule 103   arg_list_tail -> empty
Rule 104   bin_op -> PLUS
Rule 105   bin_op -> MINUS
Rule 106   bin_op -> TIMES
Rule 107   bin_op -> DIVIDE
Rule 108   bin_op -> MOD
Rule 109   bin_op -> EQ
Rule 110   bin_op -> NEQ
Rule 111   bin_op -> LT
Rule 112   bin_op -> GT
Rule 113   bin_op -> LE
Rule 114   bin_op -> GE
Rule 115   empty -> <empty>

Terminals, with rules where they appear

AGENT                : 26
ARROW                : 44
BREAK                : 71
CHAT                 : 39 40
COLON                : 10 11 25 26 35 36 37 38 39 40 41 44 50 50 51 67 70 73 73 74 75
COMMA                : 54 90 91 95 96 102
CONNECT              : 41
CONTINUE             : 72
DEDENT               : 26 35 36 37 41 44 57
DEF                  : 50 51
DIVIDE               : 107
DOT                  : 46 47 48 98
ELSE                 : 73
EQ                   : 109
EQUALS               : 10 12 67 68 97
FOR                  : 70
GE                   : 114
GT                   : 112
IDENTIFIER           : 10 11 12 13 25 26 39 44 45 46 50 51 67 68 70 84 97 98 98 99
IF                   : 73 74
IN                   : 70
INDENT               : 26 35 36 37 41 44 57
INPUT                : 35 48
LBRACE               : 21 22 87 92
LE                   : 113
LPAREN               : 50 51 99
LT                   : 111
MEMORY               : 37
MINUS                : 105
MOD                  : 108
MODEL                : 38
NEQ                  : 110
NEWLINE              : 
NUMBER               : 86
OUTPUT               : 36 47
PLUS                 : 104
RBRACE               : 21 22 87 92
RETURN               : 69
RPAREN               : 50 51 99
STRING               : 38 85
TIMES                : 106
TRIPLE_STRING        : 39 40
TYPE_BOOL            : 20
TYPE_FLOAT           : 19
TYPE_INT             : 18
TYPE_LIST            : 21
TYPE_RECORD          : 22
TYPE_STR             : 17
TYPE_TUPLE           : 
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

agent_body           : 26 27
agent_body_item      : 27 28
agent_def            : 5
agent_ref            : 44 44
agent_ref_tail       : 45 46 47 48
arg_list             : 99
arg_list_tail        : 100 102
assign_stmt          : 63
atom                 : 78
base_type            : 14
bin_op               : 76
break_stmt           : 64
chat_block           : 34
connect_block        : 6
connection           : 42 43
connection_list      : 41 42
continue_stmt        : 65
empty                : 49 53 55 101 103
expr                 : 10 12 67 68 69 70 73 74 75 83 88 89 90 91 97 100 102
expr_head            : 76 77
expr_tail            : 76
field_access         : 81
field_assign         : 93 94 95 96
field_decl           : 23 24
field_decl_list      : 22 23
for_stmt             : 60
func_call            : 82
func_def             : 7
if_stmt              : 61
input_block          : 29
list_elements        : 87
list_elements_tail   : 88 90
list_expr            : 79
list_type            : 15
memory_block         : 31
model_block          : 32
output_block         : 30
param_decl           : 52 54
param_list           : 50 51
param_list_tail      : 52 54
program              : 0
program_body         : 1 2
program_body_item    : 2 3
record_elements      : 92
record_elements_tail : 93 95
record_expr          : 80
record_type          : 16
return_stmt          : 66
statement            : 4 33 58 59
statement_list       : 57 58
stmt_block           : 50 51 70 73 73 74 75
type                 : 10 11 21 25 44 50 67
var_decl             : 8 9 56
var_decl_list        : 8 35 36 37
while_stmt           : 62


state 0

    (0) S' -> . program
    (1) program -> . program_body
    (2) program_body -> . program_body_item program_body
    (3) program_body -> . program_body_item
    (4) program_body_item -> . statement
    (5) program_body_item -> . agent_def
    (6) program_body_item -> . connect_block
    (7) program_body_item -> . func_def
    (60) statement -> . for_stmt
    (61) statement -> . if_stmt
    (62) statement -> . while_stmt
    (63) statement -> . assign_stmt
    (64) statement -> . break_stmt
    (65) statement -> . continue_stmt
    (66) statement -> . return_stmt
    (26) agent_def -> . AGENT IDENTIFIER COLON INDENT agent_body DEDENT
    (41) connect_block -> . CONNECT COLON INDENT connection_list DEDENT
    (50) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON type COLON stmt_block
    (51) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON stmt_block
    (70) for_stmt -> . FOR IDENTIFIER IN expr COLON stmt_block
    (73) if_stmt -> . IF expr COLON stmt_block ELSE COLON stmt_block
    (74) if_stmt -> . IF expr COLON stmt_block
    (75) while_stmt -> . WHILE expr COLON stmt_block
    (67) assign_stmt -> . IDENTIFIER COLON type EQUALS expr
    (68) assign_stmt -> . IDENTIFIER EQUALS expr
    (71) break_stmt -> . BREAK
    (72) continue_stmt -> . CONTINUE
    (69) return_stmt -> . RETURN expr

    AGENT           shift and go to state 15
    CONNECT         shift and go to state 17
    DEF             shift and go to state 18
    FOR             shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    IDENTIFIER      shift and go to state 16
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    RETURN          shift and go to state 24

    program                        shift and go to state 1
    program_body                   shift and go to state 2
    program_body_item              shift and go to state 3
    statement                      shift and go to state 4
    agent_def                      shift and go to state 5
    connect_block                  shift and go to state 6
    func_def                       shift and go to state 7
    for_stmt                       shift and go to state 8
    if_stmt                        shift and go to state 9
    while_stmt                     shift and go to state 10
    assign_stmt                    shift and go to state 11
    break_stmt                     shift and go to state 12
    continue_stmt                  shift and go to state 13
    return_stmt                    shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> program_body .

    $end            reduce using rule 1 (program -> program_body .)


state 3

    (2) program_body -> program_body_item . program_body
    (3) program_body -> program_body_item .
    (2) program_body -> . program_body_item program_body
    (3) program_body -> . program_body_item
    (4) program_body_item -> . statement
    (5) program_body_item -> . agent_def
    (6) program_body_item -> . connect_block
    (7) program_body_item -> . func_def
    (60) statement -> . for_stmt
    (61) statement -> . if_stmt
    (62) statement -> . while_stmt
    (63) statement -> . assign_stmt
    (64) statement -> . break_stmt
    (65) statement -> . continue_stmt
    (66) statement -> . return_stmt
    (26) agent_def -> . AGENT IDENTIFIER COLON INDENT agent_body DEDENT
    (41) connect_block -> . CONNECT COLON INDENT connection_list DEDENT
    (50) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON type COLON stmt_block
    (51) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON stmt_block
    (70) for_stmt -> . FOR IDENTIFIER IN expr COLON stmt_block
    (73) if_stmt -> . IF expr COLON stmt_block ELSE COLON stmt_block
    (74) if_stmt -> . IF expr COLON stmt_block
    (75) while_stmt -> . WHILE expr COLON stmt_block
    (67) assign_stmt -> . IDENTIFIER COLON type EQUALS expr
    (68) assign_stmt -> . IDENTIFIER EQUALS expr
    (71) break_stmt -> . BREAK
    (72) continue_stmt -> . CONTINUE
    (69) return_stmt -> . RETURN expr

    $end            reduce using rule 3 (program_body -> program_body_item .)
    AGENT           shift and go to state 15
    CONNECT         shift and go to state 17
    DEF             shift and go to state 18
    FOR             shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    IDENTIFIER      shift and go to state 16
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    RETURN          shift and go to state 24

    program_body_item              shift and go to state 3
    program_body                   shift and go to state 25
    statement                      shift and go to state 4
    agent_def                      shift and go to state 5
    connect_block                  shift and go to state 6
    func_def                       shift and go to state 7
    for_stmt                       shift and go to state 8
    if_stmt                        shift and go to state 9
    while_stmt                     shift and go to state 10
    assign_stmt                    shift and go to state 11
    break_stmt                     shift and go to state 12
    continue_stmt                  shift and go to state 13
    return_stmt                    shift and go to state 14

state 4

    (4) program_body_item -> statement .

    AGENT           reduce using rule 4 (program_body_item -> statement .)
    CONNECT         reduce using rule 4 (program_body_item -> statement .)
    DEF             reduce using rule 4 (program_body_item -> statement .)
    FOR             reduce using rule 4 (program_body_item -> statement .)
    IF              reduce using rule 4 (program_body_item -> statement .)
    WHILE           reduce using rule 4 (program_body_item -> statement .)
    IDENTIFIER      reduce using rule 4 (program_body_item -> statement .)
    BREAK           reduce using rule 4 (program_body_item -> statement .)
    CONTINUE        reduce using rule 4 (program_body_item -> statement .)
    RETURN          reduce using rule 4 (program_body_item -> statement .)
    $end            reduce using rule 4 (program_body_item -> statement .)


state 5

    (5) program_body_item -> agent_def .

    AGENT           reduce using rule 5 (program_body_item -> agent_def .)
    CONNECT         reduce using rule 5 (program_body_item -> agent_def .)
    DEF             reduce using rule 5 (program_body_item -> agent_def .)
    FOR             reduce using rule 5 (program_body_item -> agent_def .)
    IF              reduce using rule 5 (program_body_item -> agent_def .)
    WHILE           reduce using rule 5 (program_body_item -> agent_def .)
    IDENTIFIER      reduce using rule 5 (program_body_item -> agent_def .)
    BREAK           reduce using rule 5 (program_body_item -> agent_def .)
    CONTINUE        reduce using rule 5 (program_body_item -> agent_def .)
    RETURN          reduce using rule 5 (program_body_item -> agent_def .)
    $end            reduce using rule 5 (program_body_item -> agent_def .)


state 6

    (6) program_body_item -> connect_block .

    AGENT           reduce using rule 6 (program_body_item -> connect_block .)
    CONNECT         reduce using rule 6 (program_body_item -> connect_block .)
    DEF             reduce using rule 6 (program_body_item -> connect_block .)
    FOR             reduce using rule 6 (program_body_item -> connect_block .)
    IF              reduce using rule 6 (program_body_item -> connect_block .)
    WHILE           reduce using rule 6 (program_body_item -> connect_block .)
    IDENTIFIER      reduce using rule 6 (program_body_item -> connect_block .)
    BREAK           reduce using rule 6 (program_body_item -> connect_block .)
    CONTINUE        reduce using rule 6 (program_body_item -> connect_block .)
    RETURN          reduce using rule 6 (program_body_item -> connect_block .)
    $end            reduce using rule 6 (program_body_item -> connect_block .)


state 7

    (7) program_body_item -> func_def .

    AGENT           reduce using rule 7 (program_body_item -> func_def .)
    CONNECT         reduce using rule 7 (program_body_item -> func_def .)
    DEF             reduce using rule 7 (program_body_item -> func_def .)
    FOR             reduce using rule 7 (program_body_item -> func_def .)
    IF              reduce using rule 7 (program_body_item -> func_def .)
    WHILE           reduce using rule 7 (program_body_item -> func_def .)
    IDENTIFIER      reduce using rule 7 (program_body_item -> func_def .)
    BREAK           reduce using rule 7 (program_body_item -> func_def .)
    CONTINUE        reduce using rule 7 (program_body_item -> func_def .)
    RETURN          reduce using rule 7 (program_body_item -> func_def .)
    $end            reduce using rule 7 (program_body_item -> func_def .)


state 8

    (60) statement -> for_stmt .

    AGENT           reduce using rule 60 (statement -> for_stmt .)
    CONNECT         reduce using rule 60 (statement -> for_stmt .)
    DEF             reduce using rule 60 (statement -> for_stmt .)
    FOR             reduce using rule 60 (statement -> for_stmt .)
    IF              reduce using rule 60 (statement -> for_stmt .)
    WHILE           reduce using rule 60 (statement -> for_stmt .)
    IDENTIFIER      reduce using rule 60 (statement -> for_stmt .)
    BREAK           reduce using rule 60 (statement -> for_stmt .)
    CONTINUE        reduce using rule 60 (statement -> for_stmt .)
    RETURN          reduce using rule 60 (statement -> for_stmt .)
    $end            reduce using rule 60 (statement -> for_stmt .)
    INPUT           reduce using rule 60 (statement -> for_stmt .)
    OUTPUT          reduce using rule 60 (statement -> for_stmt .)
    MEMORY          reduce using rule 60 (statement -> for_stmt .)
    MODEL           reduce using rule 60 (statement -> for_stmt .)
    CHAT            reduce using rule 60 (statement -> for_stmt .)
    DEDENT          reduce using rule 60 (statement -> for_stmt .)


state 9

    (61) statement -> if_stmt .

    AGENT           reduce using rule 61 (statement -> if_stmt .)
    CONNECT         reduce using rule 61 (statement -> if_stmt .)
    DEF             reduce using rule 61 (statement -> if_stmt .)
    FOR             reduce using rule 61 (statement -> if_stmt .)
    IF              reduce using rule 61 (statement -> if_stmt .)
    WHILE           reduce using rule 61 (statement -> if_stmt .)
    IDENTIFIER      reduce using rule 61 (statement -> if_stmt .)
    BREAK           reduce using rule 61 (statement -> if_stmt .)
    CONTINUE        reduce using rule 61 (statement -> if_stmt .)
    RETURN          reduce using rule 61 (statement -> if_stmt .)
    $end            reduce using rule 61 (statement -> if_stmt .)
    INPUT           reduce using rule 61 (statement -> if_stmt .)
    OUTPUT          reduce using rule 61 (statement -> if_stmt .)
    MEMORY          reduce using rule 61 (statement -> if_stmt .)
    MODEL           reduce using rule 61 (statement -> if_stmt .)
    CHAT            reduce using rule 61 (statement -> if_stmt .)
    DEDENT          reduce using rule 61 (statement -> if_stmt .)


state 10

    (62) statement -> while_stmt .

    AGENT           reduce using rule 62 (statement -> while_stmt .)
    CONNECT         reduce using rule 62 (statement -> while_stmt .)
    DEF             reduce using rule 62 (statement -> while_stmt .)
    FOR             reduce using rule 62 (statement -> while_stmt .)
    IF              reduce using rule 62 (statement -> while_stmt .)
    WHILE           reduce using rule 62 (statement -> while_stmt .)
    IDENTIFIER      reduce using rule 62 (statement -> while_stmt .)
    BREAK           reduce using rule 62 (statement -> while_stmt .)
    CONTINUE        reduce using rule 62 (statement -> while_stmt .)
    RETURN          reduce using rule 62 (statement -> while_stmt .)
    $end            reduce using rule 62 (statement -> while_stmt .)
    INPUT           reduce using rule 62 (statement -> while_stmt .)
    OUTPUT          reduce using rule 62 (statement -> while_stmt .)
    MEMORY          reduce using rule 62 (statement -> while_stmt .)
    MODEL           reduce using rule 62 (statement -> while_stmt .)
    CHAT            reduce using rule 62 (statement -> while_stmt .)
    DEDENT          reduce using rule 62 (statement -> while_stmt .)


state 11

    (63) statement -> assign_stmt .
